Use Java NIO APIs
Instead of deprecated Guava or commons-io ones.